Replace NotNull by jspecify for API nullability documentation
Still used as jakarta-validation annotation